# TSRouter-VLDB

./: .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES.md  environment-linux-gpu.yml  pyproject.toml  requirements_core.txt  requirements_method.txt
configs/: artifact_layout.yaml  artifact_manifest.yaml  execution_contract.yaml  legacy_run_contract.yaml  model_registry.yaml  paper_run_profiles.yaml  paper_tables.yaml  profile_sources.yaml  release_visibility.yaml
data/benchmark_metadata/: channel_meta.csv  dataset_properties.json
docs/: artifact_manifest.md  local_reproduction.md
scripts/: audit_public_surface.py  check_artifacts.py  check_checkpoints.py  check_environment.py  check_gifteval.py  check_release_contract.py  check_server_migration_snapshot.py  fetch_gifteval.py  fetch_model_weights.py  make_local_artifact_manifest.py  migrate_server_artifacts.py  pack_hf_artifacts.py  run_local_fast.sh  run_local_full.sh  run_public_reproduction.sh  stage_local_artifacts.py  summarize_public_reproduction.py  upload_hf_artifacts_batch.py
src/cli/: __init__.py  check_selector.py  run_model_zoo.py  tsrouter_vldb.py  vldb_fast_baselines.py
src/config/: __init__.py  dataset_config.py  model_zoo_config.py
src/encoder/: __init__.py  base_encoder.py  encoder_config.py  simplets_checkpoint.py  trained_encoder.py
src/model_zoo/: Chronos2_model.py  Chronos_model.py  FlowState_model.py  Kairos_model.py  Moirai2_model.py  Moirai_model.py  PatchTST_FM_model.py  TiRex_model.py  TimeMOE_model.py  TimesFM_model.py  Toto2_model.py  Toto_model.py  __init__.py  (+1 more)
(+54 files in other folders)
